@@ -29,7 +29,7 @@
 #include <glib.h>
 #include <glib/gi18n.h>
 
-#include <tracker.h>
+#include <src/libtracker/tracker.h>
 
 gint
 main (gint argc, gchar *argv[])
