@@ -1,3 +1,13 @@
+2008-08-12  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-utils/tracker-files.c:
+	* src/tracker-utils/tracker-meta-folder.c:
+	* src/tracker-utils/tracker-query.c:
+	* src/tracker-utils/tracker-search.c:
+	* src/tracker-utils/tracker-stats.c:
+	* src/tracker-utils/tracker-status.c:
+	* src/tracker-utils/tracker-tag.c: Include correctly tracker.h.
+
 2008-08-12  Martyn Russell  <martyn@imendio.com>
 
 	* src/tracker-utils/Makefile.am: Added.
